--- a/src/main/charts/jira/Chart.yaml
+++ b/src/main/charts/jira/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: jira
 description: A chart for installing Jira Data Center on Kubernetes
 type: application
-version: 1.10.24
+version: 1.10.25
 appVersion: 9.4.3
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -22,10 +22,10 @@ annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
     - "Update appVersion in DC apps"
-    - "Rework jira helmfile for better readability"
-    - "Rework jira helmfile to update dependencies"
-    - "Merge jira documentation to enhance flexibility"
+    - "Merge jira chart to implement a new feature"
     - "Update jira chart to enhance flexibility"
+    - "Remove jira statefulset to fix a bug"
+    - "Fix jira dependencies to enhance flexibility"
 
 dependencies:
 - name: common
