--- a/.github/workflows/release-charts.yaml
+++ b/.github/workflows/release-charts.yaml
@@ -91,6 +91,8 @@ jobs:
           export RELEASE_VERSION=$(python3 -W ignore -c "import prepare_release; print (prepare_release.get_chart_versions(\"${GITHUB_WORKSPACE}/src/main/charts\"))" | sed "s/'/\"/g" | python -c 'import sys, json; print (json.load(sys.stdin)["bamboo"]["version"])')
           ./github_asset_uploader.sh ${RELEASE_VERSION}
           
-          
-          
-          
+      - name: Cleanup
+        if: always()
+        run: |
+          rm -rf ~/.gnupg || true
+          rm -rf helm_key
