--- a/src/main/charts/bamboo/Chart.yaml
+++ b/src/main/charts/bamboo/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bamboo
 description: A chart for installing Bamboo Data Center on Kubernetes
 type: application
-version: 1.10.25
+version: 1.10.26
 appVersion: 9.2.2
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -21,10 +21,10 @@ annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
     - "Update appVersion in DC apps"
-    - "Merge bamboo dependencies to update dependencies"
-    - "Merge bamboo chart to implement a new feature"
-    - "Move bamboo helmfile to enhance flexibility"
-    - "Merge bamboo chart to fix a bug"
+    - "Add bamboo tests for better readability"
+    - "Move bamboo dependencies to update dependencies"
+    - "Rework bamboo statefulset to improve performance"
+    - "Add bamboo statefulset to improve performance"
 dependencies:
 - name: common
   version: 1.0.0
