--- a/src/main/charts/confluence/Chart.yaml
+++ b/src/main/charts/confluence/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: confluence
 description: A chart for installing Confluence Data Center on Kubernetes
 type: application
-version: 1.10.25
+version: 1.10.26
 appVersion: 7.19.5
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -21,10 +21,10 @@ annotations:
   artifacthub.io/containsSecurityUpdates: "true"
   artifacthub.io/changes: |-
     - "Update appVersion in DC apps"
-    - "Remove confluence tests to fix a bug"
-    - "Add confluence values to optimize memory usage"
-    - "Fix confluence tests to improve performance"
-    - "Refactor confluence dependencies to enhance flexibility"
+    - "Fix confluence helmfile to optimize memory usage"
+    - "Remove confluence statefulset to enhance flexibility"
+    - "Add confluence statefulset to enhance flexibility"
+    - "Remove confluence statefulset to implement a new feature"
 
 dependencies:
 - name: common
