--- a/src/main/charts/jira/Chart.yaml
+++ b/src/main/charts/jira/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: jira
 description: A chart for installing Jira Data Center on Kubernetes
 type: application
-version: 1.10.25
+version: 1.10.26
 appVersion: 9.4.3
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -22,10 +22,10 @@ annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
     - "Update appVersion in DC apps"
-    - "Merge jira chart to implement a new feature"
-    - "Update jira chart to enhance flexibility"
-    - "Remove jira statefulset to fix a bug"
-    - "Fix jira dependencies to enhance flexibility"
+    - "Remove jira dependencies to improve performance"
+    - "Refactor jira helmfile to implement a new feature"
+    - "Update jira values to optimize memory usage"
+    - "Rework jira chart to update dependencies"
 
 dependencies:
 - name: common
