--- a/src/main/charts/jira/Chart.yaml
+++ b/src/main/charts/jira/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: jira
 description: A chart for installing Jira Data Center on Kubernetes
 type: application
-version: 1.10.26
+version: 1.10.27
 appVersion: 9.4.3
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -21,11 +21,7 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
-    - "Update appVersion in DC apps"
-    - "Remove jira dependencies to improve performance"
-    - "Refactor jira helmfile to implement a new feature"
-    - "Update jira values to optimize memory usage"
-    - "Rework jira chart to update dependencies"
+    - "Update Helm chart version"
 
 dependencies:
 - name: common
