--- a/src/main/charts/bitbucket/Chart.yaml
+++ b/src/main/charts/bitbucket/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bitbucket
 description: A chart for installing Bitbucket Data Center on Kubernetes
 type: application
-version: 1.10.27
+version: 1.10.28
 appVersion: 7.21.11
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,7 +20,11 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
-    - "Update Helm chart version"
+    - "Update appVersion in DC apps"
+    - "Merge bitbucket helmfile to improve performance"
+    - "Add bitbucket statefulset to optimize memory usage"
+    - "Rework bitbucket helmfile for better maintainability"
+    - "Update bitbucket values to enhance flexibility"
 
 dependencies:
 - name: common
