--- a/src/main/charts/jira/Chart.yaml
+++ b/src/main/charts/jira/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: jira
 description: A chart for installing Jira Data Center on Kubernetes
 type: application
-version: 1.10.28
+version: 1.10.29
 appVersion: 9.4.3
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -22,10 +22,10 @@ annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
     - "Update appVersion in DC apps"
-    - "Merge jira dependencies to enhance flexibility"
-    - "Remove jira tests for better readability"
-    - "Merge jira dependencies to optimize memory usage"
-    - "Refactor jira documentation to improve performance"
+    - "Fix jira dependencies to improve performance"
+    - "Rework jira tests to update dependencies"
+    - "Remove jira helmfile to implement a new feature"
+    - "Remove jira values to update dependencies"
 
 dependencies:
 - name: common
