--- a/.github/workflows/prepare-release.yaml
+++ b/.github/workflows/prepare-release.yaml
@@ -12,7 +12,7 @@ jobs:
   prepare-release:
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      PYTHONPATH: /opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages
+      # PYTHONPATH: /opt/hostedtoolcache/Python/3.9.14/x64/lib/python3.9/site-packages
     runs-on: ubuntu-latest
 
     steps:
