--- a/src/main/charts/bitbucket/Chart.yaml
+++ b/src/main/charts/bitbucket/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bitbucket
 description: A chart for installing Bitbucket Data Center on Kubernetes
 type: application
-version: 1.10.31
+version: 1.10.32
 appVersion: 7.21.11
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,15 +20,7 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
-    - "Update appVersion in DC apps"
-    - "Move bitbucket dependencies to update dependencies"
-    - "Remove bitbucket helmfile for better readability"
-    - "Merge bitbucket dependencies to enhance flexibility"
-    - "Move bitbucket dependencies to implement a new feature"
-    - "Update bitbucket dependencies to fix a bug"
-    - "Rework bitbucket templates to remove deprecated code"
-    - "Merge bitbucket templates to remove deprecated code"
-    - "Add bitbucket dependencies to improve performance"
+    - "Update Helm chart version"
 
 dependencies:
 - name: common
