--- a/src/main/charts/bamboo/Chart.yaml
+++ b/src/main/charts/bamboo/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: bamboo
 description: A chart for installing Bamboo Data Center on Kubernetes
 type: application
-version: 1.10.31
+version: 1.10.32
 appVersion: 9.2.2
 kubeVersion: ">=1.21.x-0"
 keywords:
@@ -20,15 +20,7 @@ deprecated: false
 annotations:
   artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/changes: |-
-    - "Update appVersion in DC apps"
-    - "Merge bamboo values to enhance flexibility"
-    - "Refactor bamboo statefulset for better readability"
-    - "Rework bamboo helmfile for better maintainability"
-    - "Optimize bamboo tests for better readability"
-    - "Update bamboo templates to fix a bug"
-    - "Optimize bamboo values to implement a new feature"
-    - "Move bamboo chart to improve performance"
-    - "Fix bamboo dependencies to remove deprecated code"
+    - "Update Helm chart version"
 dependencies:
 - name: common
   version: 1.0.0
